Fixed animations. Items now slide off screen instead of expanding downwards. Animations also play for thread items and are delayed properly.

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ img {
     clear: both;
     min-height: 100%;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .item {
